testing/Travis/testcases/TypeChecker/shouldFail/IntersectionTypeMismatch.adl
CONTEXT IntersectionTypeMismatchCheck IN ENGLISH

PURPOSE CONTEXT IntersectionTypeMismatchCheck
{+ Test that intersection fails when operands have different signatures.
   This verifies the type checker correctly rejects r[A*B] /\ s[B*C] due to signature mismatch. +}

RELATION r[A*B]
RELATION s[B*C]
RELATION result[A*C]

RULE testIntersectionFail: result = r /\ s

ENDCONTEXT
